[tool.poetry]
name = "geneagrapher"
version = "2.0.0"
description = "Mathematical genealogy grapher."
authors = ["David Alber <alber.david@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
websockets = "^10.4"

[tool.poetry.scripts]
ggrapher = "geneagrapher.geneagrapher:run"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
flake8 = "^6.0.0"
mypy = "^1.1.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
